data/style/Grid.css
/*
 * SPDX-License-Identifier: GPL-3.0-or-later
 * SPDX-FileCopyrightText: 2018-2025 elementary, Inc. (https://elementary.io)
 */

.cell {
    background-color: @base_color;
    border-radius: 0;
    border-top: solid 1px @menu_separator;
    border-left: solid 1px @menu_separator;
    color: @fg_color;
}

.cell:dir(rtl) {
    border-right: solid 1px @menu_separator;
    border-left: none;
}

.cell.dim-label {
    background-color: @bg_color;
}

.cell.firstcol {
    border-left: none;
}

.cell.firstcol:dir(rtl) {
    border-right: none;
}

.cell:selected #date {
    background-color: shade(@bg_color, 0.86);
    color: @fg_color;
}

.cell > box {
    margin: 3px;
}

#date {
    border-radius: 50%;
    min-height: 24px;
    min-width: 24px;
    margin: 3px;
}

#today #date {
    background-color: alpha (@accent_color, 0.15);
    color: @accent_color;
    font-weight: 700;
}

#today:selected #date {
    background-color: @accent_color;
    color: #fff;
}

